<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/graylight"
tools:context="com.example.mdelc.pettracker.EditProfile"
android:orientation="vertical">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="320dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/gradientbackground"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/generic_profile" />

        <EditText
            android:id="@+id/nameEnter"
            android:hint="Name"
            android:inputType="textPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textColor="#fff"
            android:textSize="21sp"
            android:textStyle="bold" />
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="215dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">

            <EditText
                android:id="@+id/bioEnter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:hint="@string/bio_hint"
                android:inputType="textMultiLine"
                android:textSize="14sp"
                tools:targetApi="o" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>


<LinearLayout
    android:layout_width="360dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_marginTop="10dp">
    <LinearLayout
        android:orientation="horizontal"
        android:paddingLeft="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:tint="@color/startblue"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_email_black_24dp"/>

        <EditText
            android:id="@+id/emailEnter"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="20dp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingLeft="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:tint="@color/startblue"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_local_phone_black_24dp"/>

        <EditText
            android:id="@+id/phoneEnter"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="20dp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingLeft="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:tint="@color/startblue"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_home_black_24dp"/>

        <EditText
            android:id="@+id/homeEnter"
            android:hint="@string/home_hint"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="20dp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>

<Button
    android:id="@+id/button_enter"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="5dp"
    android:background="@drawable/buttonstyleithgradient"
    android:text="@string/save_button"
    android:textColor="#fff" />

</LinearLayout>